# MegBA

./: CMakeLists.txt  README.md
examples/: BAL_Double.cpp  BAL_Double_analytical.cpp  BAL_Float.cpp  BAL_Float_analytical.cpp  BAL_analytical.cpp  BAL_numerical.cpp  CMakeLists.txt  Venice.cmake
src/algo/: CMakeLists.txt
src/edge/: CMakeLists.txt
src/geo/: CMakeLists.txt
src/linear_system/: CMakeLists.txt  base_linear_system.cpp
src/operator/: CMakeLists.txt  jet_vector.cpp
src/problem/: CMakeLists.txt
src/resource/: CMakeLists.txt  memory_pool.cu
src/solver/: CMakeLists.txt
